Add fixed event listeners

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <canvas id="canvas" width="700" height="700"></canvas>
 <button id="board">Set Wall</button>
-<button onclick="(e) => selectTile(e, 'player')" id="player">Set Player</button>
-<button onclick="(e) => selectTile(e, 'end')" id="end">Set End</button>
-<button onclick="(e) => findPath(e)" id="find_path">Find Path</button>
+<button id="player">Set Player</button>
+<button id="end">Set End</button>
+<button id="path">Find Path</button>
 <!-- <script src="js/script.js"></script> -->
 <script type="module" src="js/main.js" ></script>
 <link rel="stylesheet" href="css/index.css">
